@@ -1,5 +1,5 @@
-DIST em28xx-new-0_p20080619.tar.gz 432648 RMD160 f85a1a466c40a9fa85b382995317dc84bb8a274e SHA1 789a9f5c09d0fc48cf0576ea116b10ca6372646b SHA256 d25faa9561103c0fe633fb510a120650af76070852f55e90a3436a313620bb18
-EBUILD em28xx-new-0_p20080619.ebuild 1399 RMD160 11fe8457e45fcccb2687cc7464fe50e10a71fedf SHA1 c917c8b90cf9f7e39b71e8f5a19fef45d1558dc8 SHA256 bba7ea898a8c9bb56fea83a1452e0c920c9772254a4ad40a295d0a4e693deba5
+DIST 91c0d8704a03.tar.gz 432648 RMD160 f85a1a466c40a9fa85b382995317dc84bb8a274e SHA1 789a9f5c09d0fc48cf0576ea116b10ca6372646b SHA256 d25faa9561103c0fe633fb510a120650af76070852f55e90a3436a313620bb18
+EBUILD em28xx-new-0.0.20080614.160257450985987.ebuild 1507 RMD160 16e2a51ce575e8cfa7783c4d7508aa7e2bd9c001 SHA1 b4199196bf05c2c2e375d1bb7e85e3070495d1a0 SHA256 c11381c21f150ae7ca9c581a2b5742440f66755809ce3e0bc11039b0ae8205e8
 EBUILD em28xx-new-9999.ebuild 1417 RMD160 e09c0156dc4ae4231048bf6c196d699a7a2cdf69 SHA1 bcfc57adcb518386077de981cd191de83f3a4620 SHA256 6b1125450a10ab6b290b1ee665535d4c68fbb892df85ded7e628fc070522ce59
-MISC ChangeLog 763 RMD160 39dfa5cfff71eb65db49040232cff520460b92da SHA1 8d90b57f52c0d2c130fce631e19aa4f8a394f42d SHA256 9cd2623517ecd6138183cda9abd0745bdcdb4d176f31a93f57afaec5e1a3eaf0
+MISC ChangeLog 1005 RMD160 2a2049fe1f92f2c157ca7a92b6cc957da2e5c7f7 SHA1 d090a1a155bbbfaf4ef7af0b43b51c0f500e722e SHA256 829e112b4072370ec504dd86a938d98bf4bab2c13def54a48278fc2623f455dd
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
